# handlers/transaction_handler.go
@@ -1,0 +1,54 @@
+package handlers
+
+import (
+	"encoding/json"
+	"kasir-api-irfan/models"
+	"kasir-api-irfan/services"
+	"net/http"
+)
+
+type TransactionHandler struct {
+	service *services.TransactionService
+}
+
+func NewTransactionHandler(service *services.TransactionService) *TransactionHandler {
+	return &TransactionHandler{service: service}
+}
+
+// HandleCheckout godoc
+// @Summary Checkout transaction
+// @Description Membuat transaksi checkout dengan items produk
+// @Tags transactions
+// @Accept json
+// @Produce json
+// @Param request body models.CheckoutRequest true "Checkout Request"
+// @Success 200 {object} models.Transaction
+// @Failure 400 {string} string "Invalid request body"
+// @Failure 500 {string} string "Internal Server Error"
+// @Router /api/checkout [post]
+func (h *TransactionHandler) HandleCheckout(w http.ResponseWriter, r *http.Request) {
+	switch r.Method {
+	case http.MethodPost:
+		h.Checkout(w, r)
+	default:
+		http.Error(w, "Method not allowed", http.StatusMethodNotAllowed)
+	}
+}
+
+func (h *TransactionHandler) Checkout(w http.ResponseWriter, r *http.Request) {
+	var req models.CheckoutRequest
+	err := json.NewDecoder(r.Body).Decode(&req)
+	if err != nil {
+		http.Error(w, "Invalid request body", http.StatusBadRequest)
+		return
+	}
+
+	transaction, err := h.service.Checkout(req.Items)
+	if err != nil {
+		http.Error(w, err.Error(), http.StatusInternalServerError)
+		return
+	}
+
+	w.Header().Set("Content-Type", "application/json")
+	json.NewEncoder(w).Encode(transaction)
+}
